--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
 
-        <p class="view"><a href="http://bit.ly/BrianPrestCV">CV</a> <a href="./research">Research</a> <a href="./teaching">Teaching</a> </p>
+        <p class="view"><a href="http://bit.ly/BrianPrestCV">CV</a><br><a href="./research">Research</a><br><a href="./teaching">Teaching</a> </p>
 
         {% if site.github.is_user_page %}
         <p class="view"><a href="{{ site.github.owner_url }}"> GitHub </a><br><a href="https://twitter.com/bprest">Twitter</a></p>
