--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,10 +26,10 @@
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
 
-        <p class="view"><a href="http://bit.ly/BrianPrestCV">CV</a><br><a href="./research">Research</a><br><a href="./teaching">Teaching</a> </p>
+        <p class="view"><a href="http://bit.ly/BrianPrestCV"><b>CV</b></a><br><a href="./research"><b>Research</b></a><br><a href="./teaching"><b>Teaching</b></a> </p>
 
         {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}"> GitHub </a><br><a href="https://twitter.com/bprest">Twitter</a></p>
+        <p class="view"><a href="https://twitter.com/bprest">Twitter</a><br><a href="{{ site.github.owner_url }}"> GitHub </a></p>
         {% endif %}
 
         {% if site.show_downloads %}
