--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
 
-        <p class="view"><a href="https://bit.ly/prestcv"><b>Curriculum Vitae (pdf)</b></a><br><a href="./research"><b>Research</b></a><br><a href="./in-the-news"><b>In the News</b></a><br><a href="./teaching"><b>Teaching</b></a> </p>
+        <p class="view"><a href="https://bit.ly/prest_CV"><b>Curriculum Vitae (pdf)</b></a><br><a href="./research"><b>Research</b></a><br><a href="./in-the-news"><b>In the News</b></a><br><a href="./teaching"><b>Teaching</b></a> </p>
 
         {% if site.github.is_user_page %}
         <p class="view"><a href="https://twitter.com/bprest">Twitter</a><br><a href="{{ site.github.owner_url }}"> GitHub </a></p>
