--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,11 +3,11 @@
 {% include analytics.html %}
 </head>
 
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-85597225-2"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BK3KGS4XHE"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-85597225-2');
+  gtag('config', 'G-BK3KGS4XHE');
 </script>
